# software_renderer

./: .gitignore  AffineTransforms.cpp  AffineTransforms.h  CMakeLists.txt  Color.cpp  Color.h  Definitions.h  Model.cpp  Model.h  OldMainRoutines.cpp  OldMainRoutines.h  Rasterizer.cpp  Rasterizer.h  Shaders.h  TGAImage.cpp  TGAImage.h  Utils.cpp  Utils.h  Vectors.h  main.cpp
